tests/ui/not-clone-closure.stderr
error[E0277]: the trait bound `S: Clone` is not satisfied in `[closure@$DIR/not-clone-closure.rs:7:17: 7:24]`
  --> $DIR/not-clone-closure.rs:11:23
   |
LL |     let hello = move || {
   |                 ------- within this `[closure@$DIR/not-clone-closure.rs:7:17: 7:24]`
...
LL |     let hello = hello.clone();
   |                       ^^^^^ within `[closure@$DIR/not-clone-closure.rs:7:17: 7:24]`, the trait `Clone` is not implemented for `S`
   |
note: required because it's used within this closure
  --> $DIR/not-clone-closure.rs:7:17
   |
LL |     let hello = move || {
   |                 ^^^^^^^
help: consider annotating `S` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct S(i32);
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
